--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -12,8 +12,8 @@
                 {{ form_start(form) }}
                     {{ form_widget(form) }}
 
-                    <button type="submit" class="btn btn-primary">
-                        <i class="fa fa-save" aria-hidden="true"></i> {{ 'action.signup'|trans }}
+                    <button type="submit" class="btn btn-primary index-reg">
+                        {{ 'action.signup'|trans }}
                     </button>
                 {{ form_end(form) }}
             </div>
